package creatures;
import enums.*;

public class Gage extends Person{
    public Gage(){
        super();
        this.existence = Survivability.ALIVE;
        this.name = "Гэйдж";
    }
}
