package creatures;

import enums.Survivability;

public class Rachael extends Person{
     public Rachael(){
         super();
         this.existence = Survivability.ALIVE;
         this.name = "Рэйчел";
    }
}
