package enums;

public enum Survivability {
    ALIVE,
    DIED;
}
