package interfaces;

public interface Drivable {
    public void occupyTheGarage();
}
