package interfaces;

import creatures.Person;

public interface Feelingable {
    public void showEmotion(Person p);
    public void setLevel(int s);
    public int getLevel();
}
