package properties;

public class Colour {
    private String name;
    public String getName(){
        return this.name;
    }
    public Colour(String name){
        this.name = name;
    }
}
