package properties;

public class Shape {
    private String name;
    public String getName(){
        return this.name;
    }
    public Shape(String name){
        this.name = name;
    }
}
