package surroundingworld;

public class Home extends EnvironmentObject{
     public Home(){
        super("дом");
    }
}
