package surroundingworld;

public class Path extends EnvironmentObject{
    public Path(){
        super("тропинка");
    }
}
